--- a/Hirdavat.Servis/Hirdavat.Servis.csproj
+++ b/Hirdavat.Servis/Hirdavat.Servis.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hirdavat.Core\Hirdavat.Core.csproj" />
+    <ProjectReference Include="..\Hirdavat.Data\Hirdavat.Data.csproj" />
+  </ItemGroup>
 
 </Project>
