Migration Öncesi start up cs  dosyası güncellendi

--- a/Hirdavat_Api_Nesne2/appsettings.json
+++ b/Hirdavat_Api_Nesne2/appsettings.json
@@ -1,4 +1,7 @@
 {
+  //Veritabaný baðlantýsý için
+  "ConnectionString": { "SqlConStr": "Data Source=DESKTOP-8OFLQJP;Initial Catalog=HirdavatDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
+ //
   "Logging": {
     "LogLevel": {
       "Default": "Information",
