--- a/Hirdavat_Api_Nesne2/appsettings.json
+++ b/Hirdavat_Api_Nesne2/appsettings.json
@@ -1,7 +1,8 @@
 {
-  //Veritabaný baðlantýsý için
+  //Veritabaný baðlantýsý için 
+  //her bilgisayar da  baðlantý farklýdýr 
   "ConnectionString": { "SqlConStr": "Data Source=DESKTOP-8OFLQJP;Initial Catalog=HirdavatDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
- //
+  //
   "Logging": {
     "LogLevel": {
       "Default": "Information",
