--- a/Hirdavat_Api_Nesne2/appsettings.json
+++ b/Hirdavat_Api_Nesne2/appsettings.json
@@ -1,14 +1,26 @@
+//{
+//  //Veritabaný baðlantýsý için 
+//  //her bilgisayar da  baðlantý farklýdýr 
+//  "ConnectionString": { "SqlConStr": "Data Source=DESKTOP-8OFLQJP;Initial Catalog=HirdavatDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
+//  //
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft": "Warning",
+//      "Microsoft.Hosting.Lifetime": "Information"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
 {
-  //Veritabaný baðlantýsý için 
-  //her bilgisayar da  baðlantý farklýdýr 
-  "ConnectionString": { "SqlConStr": "Data Source=DESKTOP-8OFLQJP;Initial Catalog=HirdavatDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
-  //
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "memory": "data-in-memory",
+    "default": "data source=default.sqlite3"
+  }
 }
