login control ve  Authorize işlemlerinin yapılması

--- a/Hirdavat_Api_Nesne2/appsettings.json
+++ b/Hirdavat_Api_Nesne2/appsettings.json
@@ -18,9 +18,15 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "memory": "data-in-memory",
     "default": "data source=default.sqlite3"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+
+    "Key": "fatihmehmetsayinSecretKey",
+    "Issuer": "fatihmehmetsayin.com"
+
   }
 }
