--- a/Hirdavat.M/Hirdavat.M.Android/Properties/AndroidManifest.xml
+++ b/Hirdavat.M/Hirdavat.M.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,7 @@
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
     <application android:label="Hirdavat.M.Android"></application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <network-security-config>
+    <base-config cleartextTrafficPermitted="true" />
+  </network-security-config>
 </manifest>
